--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ ul {
     padding: 2.18rem 9.37rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 #me-title{
     font-size: 1.5rem;
@@ -42,3 +42,25 @@ ul {
     font-weight: 500;
     padding: 1rem 0;
 }
+#me-buttons{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+#download-cv-buttom{
+    background-color: #19B9F7;
+}
+.me-buttom{
+    width: 8rem;
+    height: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
